--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,7 +12,7 @@
     <div class="container-fluid d-flex align-items-center">
       <h1 class="d-flex align-items-center fs-4 mb-0">
         <a href="/">
-          <img src="/images/logo.png" height="45" class="me-3" alt="Orinoco">
+          <img src="<%= require('/src/images/logo.png').default %>" height="45" class="me-3" alt="Orinoco">
         </a>
       </h1>
       <div class="justify-content-between align-items-center ms-auto">
