--- a/src/templates/checkout/index.html
+++ b/src/templates/checkout/index.html
@@ -29,7 +29,7 @@
         <div class="ps-lg-5 col-lg-5 order-lg-last mb-4">
           <h2 class="h4 d-flex justify-content-between align-items-center mb-5">
             <span class="fw-bold">Panier</span>
-            <span class="badge bg-secondary fs-6 text-dark total-items-cart">0</span>
+            <span class="badge bg-secondary fs-6 text-dark total-items-cart">&nbsp;&nbsp;</span>
           </h2>
           <div class="d-flex justify-content-center" id="data-loading">
             <div class="spinner-border" role="status">
