--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,8 +16,9 @@
         </a>
       </h1>
       <div class="justify-content-between align-items-center ms-auto">
-        <a href="<%= require('/configuration/routes').default.checkout %>" class="btn btn-link">
-          Mon Panier<span class="ms-2 badge bg-secondary text-dark total-items-cart d-none d-sm-inline-block">0</span>
+        <a href="<%= require('/configuration/pages').default.checkout %>" class="btn btn-link">
+          Mon Panier<span
+            class="ms-2 badge bg-secondary text-dark total-items-cart d-none d-sm-inline-block">&nbsp;&nbsp;</span>
           <span class="visually-hidden">produits</span>
         </a>
       </div>
