--- a/src/templates/checkout/index.html
+++ b/src/templates/checkout/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Orinoco - Mon Panier</title>
+  <title>Orinoco - Commande</title>
 </head>
 
 <body>
